<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APP TIENDA</string>
    <string name="titulo"> MI TIENDA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenida">Autor: Grupo</string>
    <string name="compra">Realizar Compra</string>
    <string name="ingreso">Ingresar Producto</string>
    <string name="lbltipo">Tipo: </string>
    <string name="lblID">Código: </string>
    <string name="lblnombre">Nombre: </string>
    <string name="lblcosto">Costo:</string>


    <string-array name="opciones">
        <item>Selecciona...</item>
        <item>Grupo de productos(frutas, verduras,etc)</item>
        <item>Producto</item>
    </string-array>
    <string name="prodcodigo"></string>
    <string name="prodnombre"></string>
    <string name="prodcosto">0.00</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnSalir">Salir</string>
    <string name="intermedio">Elija una opcion</string>
    <string name="btnprincipal">Grupo de Productos</string>
    <string name="btnsecundario">Producto Unitario</string>
    <string name="nombre">Seleccione</string>
    <string name="iniciar">Iniciar</string>

    <string name="tpass">Password</string>
    <string name="btnok">Ingresar</string>
    <string name="tuser">User</string>

    <string name="cpass">Password</string>
    <string name="ctnok">Ingresar</string>
    <string name="cuser">User</string>

    <string name="idusuario">Cedula</string>
    <string name="nombrecliente">Usuario</string>
    <string name="correo">Email</string>
    <string name="contraseña"> Contraseña</string>
    <string name="crear">Agregar Usuario </string>



</resources>
